
Entity Translation 7.x-1.x, xxxx-xx-xx
--------------------------------------
#2179183 by dkingofpa, Jānis Bebrītis | SocialNicheGuru: Fixed Fatal error: Unsupported
  operand types in /entity_translation.module on line 188.
#1605406 by joelrosen, Jose Reyero, paulihuhtiniemi, guillaumev | mindaugasd: Exposed
  translated field content to Views so that multiple language translations can be shown
  simultaneously.
#2160559 by w3wfr: Warning because of empty value line 675.
#2151503 by SebCorbin: Check for translation access for Add links.
#2130091 by peximo: Media edit dialog integration bug.
#2065221 by catch, plach: Fixed Static cache for handlers should key by $vid.
#1516202 by fabsor, spotzero: Added a CTools access plugin for checking if a
  translation is available.
#2027513 by GaëlG, jcisio: Added support for nested values for 'edit form' in
  hook_entity_info().
#2073231 by plach: Rename entity_translation_form_language() to
  entity_translation_get_existing_language().
#2072865 by douggreen: Fixed Only replace 'delete' button with
  'delete translation', don't add one that doesn't exist.
#1865244 by plach | bojanz, agoradesign, ciss, interdruper, joel_osc: Added
  support for multiple translation handlers on the same form.
#2055491 by plach: Fixed Synced image fields cannot be emptied.
#1866076 by grndlvl: Added support for non-entity load tokens when declaring
  translations.


Entity Translation 7.x-1.0-beta3, 2013-07-23
--------------------------------------------
#2037789 by Jelle_S: Fixed Default to user_access() access callback like drupal
  menu does.
#1982140 by bforchhammer | carligraph: Fixed Menu item is deleted when adding a
  third translation.
#2000926 by GiorgosK, bforchhammer: Fixed entity_translation_i18n_menu should
  check if entity is node before deleting menu links.
#1991452 by twistor: Fixed Strict warnings on testing page.
#1992588 by bforchhammer: Fixed PHP notices on node page (menu-related).