@@ -554,8 +554,18 @@ function entity_translation_edit_access() {
   $entity_type = array_shift($args);
   $entity = array_shift($args);
   $langcode = array_shift($args);
+  $edit_form_item = array_shift($args);
+  $access_callback = isset($edit_form_item['access callback']) ? $edit_form_item['access callback'] : 'user_access';
 
   $handler = entity_translation_get_handler($entity_type, $entity);
+
+  // First, check a handler has been loaded. This could be empty if a
+  // non-existent entity edit path has been requested, for example. Delegate
+  // directly to the edit form item access callback in this case.
+  if (empty($handler)) {
+    return _entity_translation_callback($access_callback, $args, $edit_form_item);
+  }
+
   $translations = $handler->getTranslations();
   $langcode = $langcode = entity_translation_get_existing_language($entity_type, $entity, $langcode);
 
@@ -573,8 +583,6 @@ function entity_translation_edit_access() {
     // is language neutral we need to let editors access it.
     $enabled_languages = entity_translation_languages($entity_type, $entity);
     if (isset($enabled_languages[$langcode]) || $langcode == LANGUAGE_NONE) {
-      $edit_form_item = array_shift($args);
-      $access_callback = isset($edit_form_item['access callback']) ? $edit_form_item['access callback'] : 'user_access';
       return _entity_translation_callback($access_callback, $args, $edit_form_item);
     }
   }
@@ -1157,6 +1165,17 @@ function entity_translation_field_attach_delete($entity_type, $entity) {
 }
 
 /**
+ * Implements hook_field_attach_delete_revision().
+ */
+function entity_translation_field_attach_delete_revision($entity_type, $entity) {
+  if (entity_translation_enabled($entity_type, $entity)) {
+    $handler = entity_translation_get_handler($entity_type, $entity);
+    $handler->removeRevisionTranslations();
+    $handler->saveTranslations();
+  }
+}
+
+/**
  * Implementation of hook_field_attach_form().
  */
 function entity_translation_field_attach_form($entity_type, $entity, &$form, &$form_state, $langcode) {
@@ -1709,6 +1728,9 @@ function entity_translation_enabled($entity_type, $entity = NULL, $skip_handler 
 
 /**
  * Determines whether the given entity bundle is translatable.
+ *
+ * NOTE: Does not check for whether the entity type is translatable.
+ * Consider using entity_translation_enabled() instead.
  *
  * @param $entity_type
  *   The entity type the bundle to be checked belongs to.
