@@ -78,6 +78,11 @@ interface EntityTranslationHandlerInterface {
   public function removeTranslations();
 
   /**
+   * Removes all translations from the current revision.
+   */
+  public function removeRevisionTranslations();
+
+  /**
    * Initialize the language of the original field values.
    *
    * Ensure that the original translation language matches the language assigned
@@ -134,6 +139,11 @@ interface EntityTranslationHandlerInterface {
    * Return TRUE if a new revision of the entity has just been created.
    */
   public function isRevision();
+
+  /**
+   * Return TRUE if the entity type supports revisions.
+   */
+  public function isRevisionable();
 
   /**
    * Replaces the wrapped entity.
@@ -338,6 +348,7 @@ class EntityTranslationDefaultHandler implements EntityTranslationHandlerInterfa
   protected $entityInfo;
   protected $entityId;
   protected $bundle;
+  protected $revisionable;
 
   /**
    * The translation handler factory.
@@ -408,14 +419,29 @@ class EntityTranslationDefaultHandler implements EntityTranslationHandlerInterfa
       return;
     }
 
+    $revisionable = self::isEntityTypeRevisionable($entity_type);
+    $revisions_ids = array();
     foreach ($entities as $id => $entity) {
       $entities[$id]->{$translations_key} = self::emptyTranslations();
+      if ($revisionable) {
+        list(, $revisions_id,) = entity_extract_ids($entity_type, $entity);
+        $revisions_ids[$id] = $revisions_id;
+      }
     }
 
-    $results = db_select('entity_translation', 'et')
+    $table = $revisionable ? 'entity_translation_revision' : 'entity_translation';
+    $query = db_select($table, 'et')
       ->fields('et')
-      ->condition('entity_type', $entity_type)
-      ->condition('entity_id', array_keys($entities), 'IN')
+      ->condition('entity_type', $entity_type);
+
+    if (!$revisionable) {
+      $query->condition('entity_id', array_keys($entities), 'IN');
+    }
+    else {
+      $query->condition('revision_id', $revisions_ids, 'IN');
+    }
+
+    $results = $query
       ->orderBy('entity_id')
       ->orderBy('created')
       ->execute();
@@ -501,43 +527,14 @@ class EntityTranslationDefaultHandler implements EntityTranslationHandlerInterfa
    * @see EntityTranslationHandlerInterface::saveTranslations()
    */
   public function saveTranslations() {
-    // Delete and insert, rather than update, in case a value was added.
-    db_delete('entity_translation')
-      ->condition('entity_type', $this->entityType)
-      ->condition('entity_id', $this->entityId)
-      ->execute();
-
     $translations = $this->getTranslations();
 
-    if (count($translations->data)) {
-      global $user;
+    // Save current values.
+    $this->doSaveTranslations($translations, 'entity_translation');
 
-      $columns = array('entity_type', 'entity_id', 'language', 'source', 'uid', 'status', 'translate', 'created', 'changed');
-      $query = db_insert('entity_translation')->fields($columns);
-
-      // These values should overridde the translation ones as they are not
-      // supposed to change.
-      $overrides = array(
-        'entity_id' => $this->entityId,
-        'entity_type' => $this->entityType,
-      );
-
-      // These instead are just defaults.
-      $defaults = array(
-        'source' => '',
-        'uid' => $user->uid,
-        'translate' => 0,
-        'status' => 0,
-        'created' => REQUEST_TIME,
-        'changed' => REQUEST_TIME,
-      );
-
-      foreach ($translations->data as $langcode => $translation) {
-        $translation = $overrides + $translation + $defaults;
-        $query->values($translation);
-      }
-
-      $query->execute();
+    // Save revision values.
+    if ($this->isRevisionable()) {
+      $this->doSaveTranslations($translations, 'entity_translation_revision', TRUE);
     }
 
     // The translation handler interface decouples operations on translations at
@@ -564,6 +561,54 @@ class EntityTranslationDefaultHandler implements EntityTranslationHandlerInterfa
 
       // Avoid firing hooks more than once for the same changes.
       $translations->hook = array();
+    }
+  }
+
+  /**
+   * Saves entity translation records to the storage.
+   */
+  protected function doSaveTranslations($translations, $table, $revision = FALSE) {
+    // Delete and insert, rather than update, in case a value was added.
+    $query = db_delete($table)
+      ->condition('entity_type', $this->entityType)
+      ->condition('entity_id', $this->entityId);
+    // If we are storing translations for the current revision or we are
+    // deleting the entity we should remove all translation data.
+    $langcode = $translations->original;
+    $hook = isset($translations->hook) ? $translations->hook : array();
+    if ($revision && $this->isRevisionable() && (empty($hook[$langcode]['hook']) || $hook[$langcode]['hook'] != 'delete')) {
+      $query->condition('revision_id', $this->revisionId);
+    }
+    $query->execute();
+
+    if (count($translations->data)) {
+      $columns = array('entity_type', 'entity_id', 'revision_id', 'language', 'source', 'uid', 'status', 'translate', 'created', 'changed');
+      $query = db_insert($table)->fields($columns);
+
+      // These values should override the translation ones as they are not
+      // supposed to change.
+      $overrides = array(
+        'entity_type' => $this->entityType,
+        'entity_id' => $this->entityId,
+        'revision_id' => $this->isRevisionable() ? $this->revisionId : $this->entityId,
+      );
+
+      // These instead are just defaults.
+      $defaults = array(
+        'source' => '',
+        'uid' => $GLOBALS['user']->uid,
+        'translate' => 0,
+        'status' => 0,
+        'created' => REQUEST_TIME,
+        'changed' => REQUEST_TIME,
+      );
+
+      foreach ($translations->data as $translation) {
+        $translation = $overrides + $translation + $defaults;
+        $query->values($translation);
+      }
+
+      $query->execute();
     }
   }
 
@@ -707,6 +752,17 @@ class EntityTranslationDefaultHandler implements EntityTranslationHandlerInterfa
   }
 
   /**
+   * @see EntityTranslationHandlerInterface::removeRevisionTranslations()
+   */
+  public function removeRevisionTranslations() {
+    $translations_key = $this->getTranslationsKey();
+    $keys = array_keys($this->entity->{$translations_key}->data);
+    $values = array_fill(0, count($keys), array('hook' => 'delete_revision'));
+    $this->removeTranslation(NULL);
+    $this->entity->{$translations_key}->hook = array_combine($keys, $values);
+  }
+
+  /**
    * @see EntityTranslationHandlerInterface::initOriginalTranslation()
    */
   public function initOriginalTranslation() {
@@ -831,6 +887,25 @@ class EntityTranslationDefaultHandler implements EntityTranslationHandlerInterfa
   }
 
   /**
+   * @see EntityTranslationHandlerInterface::isRevisionable()
+   */
+  public function isRevisionable() {
+    $result = FALSE;
+    if (!isset($this->revisionable)) {
+      $result = self::isEntityTypeRevisionable($this->entityType);
+    }
+    return $result;
+  }
+
+  /**
+   * Returns whether the entity type is revisionable.
+   */
+  public static function isEntityTypeRevisionable($entity_type) {
+    $entity_info = entity_get_info($entity_type);
+    return variable_get('entity_translation_revision_enabled', FALSE) && !empty($entity_info['entity keys']['revision']);
+  }
+
+  /**
    * @see EntityTranslationHandlerInterface::setEntity()
    */
   public function setEntity($entity) {
@@ -842,8 +917,8 @@ class EntityTranslationDefaultHandler implements EntityTranslationHandlerInterfa
       $this->entity->{$translations_key} = self::emptyTranslations();
     }
 
-    // Update bundle and entity id properties.
-    list($this->entityId, , $this->bundle) = entity_extract_ids($this->entityType, $this->entity);
+    // Update entity properties.
+    list($this->entityId, $this->revisionId, $this->bundle) = entity_extract_ids($this->entityType, $this->entity);
 
     // Initialize the handler id if needed.
     if (!empty($this->factory)) {
@@ -1228,7 +1303,8 @@ class EntityTranslationDefaultHandler implements EntityTranslationHandlerInterfa
         );
       }
 
-      $name = $new_translation ? $GLOBALS['user']->name : user_load($translations->data[$form_langcode]['uid'])->name;
+      $translation_author = $new_translation ? $GLOBALS['user'] : user_load($translations->data[$form_langcode]['uid']);
+      $name = isset($translation_author->name) ? $translation_author->name : '';
       $form['translation']['name'] = array(
         '#type' => 'textfield',
         '#title' => t('Authored by'),
@@ -1396,6 +1472,10 @@ class EntityTranslationDefaultHandler implements EntityTranslationHandlerInterfa
    * @see EntityTranslationHandlerInterface::entityFormLanguageWidgetSubmit()
    */
   public function entityFormLanguageWidgetSubmit($form, &$form_state) {
+    if (!entity_translation_enabled($this->entityType, $this->bundle)) {
+      return;
+    }
+
     $this->updateFormLanguage($form_state);
     $form_langcode = $this->getFormLanguage();
 
