@@ -6,9 +6,9 @@ hidden = TRUE
 dependencies[] = entity_translation
 files[] = entity_translation_test.module
 
-; Information added by Drupal.org packaging script on 2014-09-30
-version = "7.x-1.0-beta3+14-dev"
+; Information added by Drupal.org packaging script on 2014-12-18
+version = "7.x-1.0-beta3+21-dev"
 core = "7.x"
 project = "entity_translation"
-datestamp = "1412097246"
+datestamp = "1418905081"
 
