@@ -1,6 +1,18 @@
 
 Entity Translation 7.x-1.x, xxxx-xx-xx
 --------------------------------------
+#2395327 by damiankloip: FATAL error when requesting an edit path for a non-existent
+  entity.
+#2342787 by jcisio: Language widget submit handler runs on disabled entity types.
+#2389945 by rafal.enden: Tests don't pass when using different source than original node
+  language.
+#2185523 by leon.nk: Document that entity_translation_enabled_bundle() does not check
+  whether the entity type is translatable.
+#2378195 by Johnny vd Laar: Node edit notice when author of a translation is deleted.
+#2382713 by seanr: entity_translation_update_7006 fails because of SQL error before
+  variable_set('entity_translation_revision_enabled', FALSE); can run.
+#1046282 by plach, good_man, miro_dietiker, Gábor Hojtsy: Make the module work with
+  revisions.
 #2179183 by dkingofpa, Jānis Bebrītis | SocialNicheGuru: Fixed Fatal error: Unsupported
   operand types in /entity_translation.module on line 188.
 #1605406 by joelrosen, Jose Reyero, paulihuhtiniemi, guillaumev | mindaugasd: Exposed
